[package]
name = "xengine"
version = "0.1.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = {version = "^2.18", features=["xlib"]}
libc = {version = "^0.2"}
futures = {version = "^0.3"}
